# novelfmt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test_input_file.txt  vcpkg.json
doc/: quotes.md
docs/: quotes-ml-plan.md
scripts/: dev.sh
src/: main.cpp
src/cli/: options.hpp  parse_cli.cpp  parse_cli.hpp
src/common/: error.hpp  result.hpp  try.hpp
src/format/: formatter.cpp  formatter.hpp  heading.cpp  heading.hpp  normalize.cpp  normalize.hpp  paragraphs.cpp  paragraphs.hpp  pipeline.cpp  pipeline.hpp  quote.cpp  quote.hpp  sanitize.cpp  sanitize.hpp
src/io/: read_file.cpp  read_file.hpp  write_file.cpp  write_file.hpp
